--- a/values.yaml
+++ b/values.yaml
@@ -2,7 +2,9 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 3
+masterReplicaCount: 2
+slaveReplicaCount: 2
+
 updateStrategy: {}
   # When a StatefulSet's .spec.updateStrategy.type is set to OnDelete,
   # the StatefulSet controller will not automatically update the Pods
