--- a/values.yaml
+++ b/values.yaml
@@ -27,9 +27,13 @@ updateStrategy: {}
   #   partition: 1
 image:
   # From repository https://github.com/osixia/docker-openldap
-  repository: osixia/openldap
-  tag: 1.5.0
-  pullPolicy: Always
+  # repository: osixia/openldap
+  # tag: 1.4.0
+  repository: arhilazar/openldap
+  tag: latest
+  # repository: gitlab-registry.selectel.org/sre/docker/infra-openldap
+  # tag: feature-OPS-3958_add_openldap-latest
+  # pullPolicy: Always
   # pullSecret: harbor
 
 # Set the container log level
