--- a/values.yaml
+++ b/values.yaml
@@ -118,7 +118,7 @@ replication:
   tls_reqcert: "never"
 ## Persist data to a persistent volume
 persistence:
-  enabled: true
+  enabled: false
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
