--- a/templates/service-master.yaml
+++ b/templates/service-master.yaml
@@ -17,11 +17,11 @@ metadata:
 {{- end }}
 spec:
   type: {{ .Values.service.type }}
-  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
+  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.master.loadBalancerIP }}
+  loadBalancerIP: {{ .Values.service.master.loadBalancerIP }}
   {{- end }}
-  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.loadBalancerSourceRanges }}
-  loadBalancerSourceRanges: {{ toYaml .Values.service.loadBalancerSourceRanges | nindent 4 }}
+  {{- if and (eq .Values.service.type "LoadBalancer") .Values.service.master.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges: {{ toYaml .Values.service.master.loadBalancerSourceRanges | nindent 4 }}
   {{- end }}
   ports:
     - name: ldap-port
