Add secrets for tls keys and certs

--- a/templates/statefullset-master.yaml
+++ b/templates/statefullset-master.yaml
@@ -152,7 +152,7 @@ spec:
 {{- if .Values.tls.enabled }}
         - name: secret-certs
           secret:
-            secretName: {{.Values.tls.secret}}
+            secretName: {{ .Values.tls.secretMaster }}
         - name: certs
           emptyDir:
             medium: Memory
