--- a/templates/statefullset-master.yaml
+++ b/templates/statefullset-master.yaml
@@ -36,7 +36,6 @@ spec:
         release: {{ .Release.Name }}
     spec:
       initContainers:
-      {{- if .Values.tls.enabled }}
         - name: init-chmod-secret
           image: alpine
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -44,15 +43,24 @@ spec:
             - sh
             - -c
             - |
+              chown -R 911:911 /var/log/openldap
+            {{- if .Values.tls.enabled }}
+            - sh
+            - -c
+            - |
               mkdir /certs/test
               cp -Lr /tmp-certs/* /certs/test
               cp -Lr /tmp-certs/* /certs
+            {{- end }}
           volumeMounts:
+            {{- if .Values.tls.enabled }}
             - name: certs
               mountPath: "/certs"
             - name: secret-certs
               mountPath: "/tmp-certs"
-      {{- end }}
+            {{- end }}
+            - name: logs
+              mountPath: /var/log/openldap
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -80,6 +88,8 @@ spec:
             - name: data
               mountPath: /etc/ldap/slapd.d
               subPath: config-data
+            - name: logs
+              mountPath: /var/log/openldap
 {{- if .Values.tls.enabled }}
             - name: certs
               mountPath: "/container/service/slapd/assets/certs"
@@ -172,15 +182,38 @@ spec:
         {{- end }}
         resources:
           requests:
-            storage: {{ .Values.persistence.size | quote }}
+            storage: {{ .Values.persistence.dataSize | quote }}
       {{- if .Values.persistence.storageClass }}
       {{- if (eq "-" .Values.persistence.storageClass) }}
         storageClassName: ""
       {{- else }}
         storageClassName: "{{ .Values.persistence.storageClass }}"
       {{- end }}
+    - metadata:
+        name: logs
+        annotations:
+        {{- range $key, $value := .Values.persistence.annotations }}
+          {{ $key }}: {{ $value }}
+        {{- end }}
+      spec:
+        accessModes:
+        {{- range .Values.persistence.accessModes }}
+          - {{ . | quote }}
+        {{- end }}
+        resources:
+          requests:
+            storage: {{ .Values.persistence.logsSize | quote }}
+      {{- if .Values.persistence.storageClass }}
+      {{- if (eq "-" .Values.persistence.storageClass) }}
+        storageClassName: ""
+      {{- else }}
+        storageClassName: "{{ .Values.persistence.storageClass }}"
+      {{- end }}
+      {{- end }}
 {{- end }}
 {{- else }}
         - name: data
+          emptyDir: {}
+        - name: logs
           emptyDir: {}
 {{- end }}
