--- a/values.yaml
+++ b/values.yaml
@@ -122,7 +122,8 @@ persistence:
   storageClass: "local-path"
   accessModes:
     - ReadWriteOnce
-  size: 8Gi
+  dataSize: 8Gi
+  logsSize: 8Gi
 
 resources: {}
  # requests:
