--- a/values.yaml
+++ b/values.yaml
@@ -125,6 +125,35 @@ persistence:
   dataSize: 8Gi
   logsSize: 8Gi
 
+extraContainers:
+  - name: fluentd
+    image: fluent/fluentd:v1.12-1
+    volumeMounts:
+      - name: logs
+        mountPath: /var/log/openldap
+ ## Additional containers to be added to the controller pod.
+  ## See https://github.com/lemonldap-ng-controller/lemonldap-ng-controller as example.
+  #  - name: my-sidecar
+  #    image: nginx:latest
+  #  - name: lemonldap-ng-controller
+  #    image: lemonldapng/lemonldap-ng-controller:0.2.0
+  #    args:
+  #      - /lemonldap-ng-controller
+  #      - --alsologtostderr
+  #      - --configmap=$(POD_NAMESPACE)/lemonldap-ng-configuration
+  #    env:
+  #      - name: POD_NAME
+  #        valueFrom:
+  #          fieldRef:
+  #            fieldPath: metadata.name
+  #      - name: POD_NAMESPACE
+  #        valueFrom:
+  #          fieldRef:
+  #            fieldPath: metadata.namespace
+  #    volumeMounts:
+  #    - name: copy-portal-skins
+  #      mountPath: /srv/var/lib/lemonldap-ng/portal/skins
+
 resources: {}
  # requests:
  #   cpu: "100m"
