--- a/templates/statefullset-master.yaml
+++ b/templates/statefullset-master.yaml
@@ -182,38 +182,15 @@ spec:
         {{- end }}
         resources:
           requests:
-            storage: {{ .Values.persistence.dataSize | quote }}
+            storage: {{ .Values.persistence.size | quote }}
       {{- if .Values.persistence.storageClass }}
       {{- if (eq "-" .Values.persistence.storageClass) }}
         storageClassName: ""
       {{- else }}
         storageClassName: "{{ .Values.persistence.storageClass }}"
-      {{- end }}
-    - metadata:
-        name: logs
-        annotations:
-        {{- range $key, $value := .Values.persistence.annotations }}
-          {{ $key }}: {{ $value }}
-        {{- end }}
-      spec:
-        accessModes:
-        {{- range .Values.persistence.accessModes }}
-          - {{ . | quote }}
-        {{- end }}
-        resources:
-          requests:
-            storage: {{ .Values.persistence.logsSize | quote }}
-      {{- if .Values.persistence.storageClass }}
-      {{- if (eq "-" .Values.persistence.storageClass) }}
-        storageClassName: ""
-      {{- else }}
-        storageClassName: "{{ .Values.persistence.storageClass }}"
-      {{- end }}
       {{- end }}
 {{- end }}
 {{- else }}
         - name: data
-          emptyDir: {}
-        - name: logs
           emptyDir: {}
 {{- end }}
