--- a/templates/statefullset-slave.yaml
+++ b/templates/statefullset-slave.yaml
@@ -172,7 +172,7 @@ spec:
         {{- end }}
         resources:
           requests:
-            storage: {{ .Values.persistence.dataSize | quote }}
+            storage: {{ .Values.persistence.size | quote }}
       {{- if .Values.persistence.storageClass }}
       {{- if (eq "-" .Values.persistence.storageClass) }}
         storageClassName: ""
