--- a/templates/statefullset-slave.yaml
+++ b/templates/statefullset-slave.yaml
@@ -39,7 +39,7 @@ spec:
       {{- if .Values.tls.enabled }}
         - name: init-chmod-secret
           image: alpine
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.images.pullPolicy }}
           command:
             - sh
             - -c
@@ -55,8 +55,8 @@ spec:
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.images.openldap.repository }}:{{ .Values.images.openldap.tag }}"
+          imagePullPolicy: {{ .Values.images.pullPolicy }}
           args:
             - -l
             - {{ .Values.logLevel }}
@@ -139,9 +139,9 @@ spec:
       tolerations:
 {{ toYaml . | indent 8 }}
     {{- end }}
-    {{- if .Values.image.pullSecret }}
+    {{- if .Values.images.openldap.pullSecret }}
       imagePullSecrets:
-        - name: {{ .Values.image.pullSecret }}
+        - name: {{ .Values.images.openldap.pullSecret }}
     {{- end }}
       volumes:
 {{- if .Values.customLdifFiles }}
