--- a/templates/statefullset-slave.yaml
+++ b/templates/statefullset-slave.yaml
@@ -137,6 +137,37 @@ spec:
             failureThreshold: 10
           resources:
 {{ toYaml .Values.resources | indent 12 }}
+      {{- if .Values.fluentd.enabled }}
+        - name: fluentd
+          image: "{{ .Values.images.fluentd.repository }}:{{ .Values.images.fluentd.tag }}"
+          imagePullPolicy: {{ .Values.images.pullPolicy }}
+          volumeMounts:
+            - name: logs
+              mountPath: {{ .Values.log.directory }}
+            - name: fluentd-config
+              mountPath: /fluentd/etc
+      {{- end }}
+        - name: logrotate
+          image: "{{ .Values.images.logrotate.repository }}:{{ .Values.images.logrotate.tag }}"
+          imagePullPolicy: {{ .Values.images.pullPolicy }}
+          volumeMounts:
+            - name: logs
+              mountPath: {{ .Values.log.directory }}
+          env:
+            - name: "LOGROTATE_INTERVAL"
+              value: "{{ .Values.logrotate.check_interval }}"
+            - name: "LOGS_DIRECTORIES"
+              value: "{{ .Values.log.directory }}"
+            - name: "LOG_FILE_ENDINGS"
+              value: "log ldif"
+            - name: "LOGROTATE_COPIES"
+              value: "{{ .Values.logrotate.old_copies }}"
+            - name: "LOGROTATE_SIZE"
+              value: "{{ .Values.logrotate.max_log_size }}"
+          {{- if .Values.logrotate.compress }}
+            - name: "LOGROTATE_COMPRESSION"
+              value: "compress"
+          {{- end }}
     {{- with .Values.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
@@ -158,6 +189,16 @@ spec:
         - name: {{ .Values.images.openldap.pullSecret }}
     {{- end }}
       volumes:
+        - name: logs
+          emptyDir: {}
+      {{- if .Values.fluentd.enabled }}
+        - name: fluentd-config
+          configMap:
+            name: {{ template "openldap.fullname" . }}-fluentd-config
+            items:
+              - key: "fluent.conf"
+                path: "fluent.conf"
+      {{- end }}
 {{- if .Values.customLdifFiles }}
         - name: custom-ldif-files
           configMap:
