--- a/values.yaml
+++ b/values.yaml
@@ -145,34 +145,16 @@ persistence:
   dataSize: 8Gi
   logsSize: 8Gi
 
-extraContainers:
-  - name: fluentd
-    image: fluent/fluentd:v1.12-1
-    volumeMounts:
-      - name: logs
-        mountPath: /var/log/openldap
- ## Additional containers to be added to the controller pod.
-  ## See https://github.com/lemonldap-ng-controller/lemonldap-ng-controller as example.
-  #  - name: my-sidecar
-  #    image: nginx:latest
-  #  - name: lemonldap-ng-controller
-  #    image: lemonldapng/lemonldap-ng-controller:0.2.0
-  #    args:
-  #      - /lemonldap-ng-controller
-  #      - --alsologtostderr
-  #      - --configmap=$(POD_NAMESPACE)/lemonldap-ng-configuration
-  #    env:
-  #      - name: POD_NAME
-  #        valueFrom:
-  #          fieldRef:
-  #            fieldPath: metadata.name
-  #      - name: POD_NAMESPACE
-  #        valueFrom:
-  #          fieldRef:
-  #            fieldPath: metadata.namespace
-  #    volumeMounts:
-  #    - name: copy-portal-skins
-  #      mountPath: /srv/var/lib/lemonldap-ng/portal/skins
+fluentd:
+  enabled: true
+  refresh_interval: "1s"
+  splunk:
+    host: 185.10.184.212
+    port: 8088
+    token: 4340fc6d-c72f-4168-808f-08427a3461e9
+    force_http: false
+    insecure_ssl: true
+    flush_interval: "5s"
 
 resources: {}
  # requests:
